--- a/app/item/item-detail.component.html
+++ b/app/item/item-detail.component.html
@@ -2,10 +2,11 @@
     <ActionItem (tap)="onItemLike($event)" ios.position="right" text="search" android.position="popup">
         <Label text = "&#xf004;" [class]="liked ? 'fas t-36' : 'far t-36'"></Label>    
     </ActionItem>
+    <!--
     <ActionItem ios.position="right" text="/" ></ActionItem>
     <ActionItem (tap)="onItemDislike($event)" ios.position="right" text="search" android.position="popup">
         <Label text = "&#xf165;" [class]="disliked ? 'fas t-36' : 'far t-36'"></Label>
-    </ActionItem>
+    </ActionItem>-->
 </ActionBar>
 
 <GridLayout columns="*,*,*,*,*,*,*,*,*,*" rows="*,*,*,*,*,*,*,*,*,*">
