--- a/app/item/items.component.html
+++ b/app/item/items.component.html
@@ -6,14 +6,14 @@
     <!-- The bottom tab UI is created via TabStrip (the containier) and TabStripItem (for each tab)-->
     <TabStrip>
         <TabStripItem >
-            <Label text="Home"></Label>
-            <Image src="font://&#xf015;" class="fas t-36"></Image>
+            <Label text="Browse"></Label>
+            <Image src="font://&#xf00e;" class="fas t-36"></Image>
         </TabStripItem>
-        <TabStripItem class="special" pageTransition="slide">
+        <TabStripItem class="special">
             <Label text="Outfits"></Label>
             <Image src="font://&#xf553;" class="fas t-36"></Image>
         </TabStripItem>
-        <TabStripItem class="special" pageTransition="slide">
+        <TabStripItem class="special">
             <Label text="Profile"></Label>
             <Image src="font://&#xf2bd;" class="fas t-36"></Image>
         </TabStripItem>
@@ -23,20 +23,19 @@
     <TabContentItem>
         <GridLayout rows="*,*,*,*,*,*,*,*,*,*,*" columns="*,*,*,*,*,*,*,*,*,*">
             <ListPicker class="picker" style="visibility: collapse;"
-            [items]="categories" (selectedIndexChange)="categoryPicker($event)">
+            [items]="categories">
             </ListPicker>
           
             <RadListView row="0" rowspan="11" col="0" colspan="10" orientation="vertical" [items]="itemsShown"
             width="100%" height="100%" (scrolled)="scrollStartedEvent($event)" loadOnDemandMode="Auto" (loadMoreDataRequested)="onLoadMoreItemsRequested($event)" loadOnDemandBufferSize="8"
             id="listView" selectionBehavior="None" 
-            (itemSwipeProgressEnded)="onSwipeCellFinished($event)"
-            (itemSwipeProgressStarted)="onSwipeCellStarted($event)" 
-            (itemSwiping)="onItemSwiping" 
-            swipeActions="true">
+            itemSwipeProgressEnded="onSwipeCellFinished($event)"
+            itemSwipeProgressStarted="onSwipeCellStarted($event)" 
+            (itemSwiping)="onItemSwiping" >
                 <ListViewGridLayout tkListViewLayout itemInsertAnimation="Scale" scrollDirection="Vertical" ios:itemWidth="186" ios:itemHeight="180"></ListViewGridLayout>
                 <ng-template horizontalAlignment="center" let-item="item" let-index="index" >
                     <GridLayout style="background-image: ~/item/backgroundShadow.png;" [class] = "itemsLiked[index] ? 'likedBackground' : 'dislikedBackground'">
-                    <GridLayout columns="*,*,*" (loaded)="fashionItemInit($event)" [nsRouterLink]="['detail', index]" 
+                    <GridLayout columns="*,*,*" (doubleTap)="fashionItemInit(index)" loaded="fashionItemInit($event, index)" [nsRouterLink]="['detail', index]" 
                     [queryParams]="{ source: 'itemsShown', liked: itemsLiked[index], disliked: itemsDisliked[index], saved: itemsSaved[index]}" 
                     padding="0 0 0 0" >
                         <Image colspan="3" [src]="item.img[0]" height="186" ios:stretch="aspectFill" ></Image>
@@ -47,17 +46,6 @@
                     </GridLayout>
                 </GridLayout>
                 </ng-template>
-                
-                <lv:RadListView.itemSwipeTemplate>
-                    <GridLayout *tkListItemSwipeTemplate columns="auto, *, auto">
-                        <StackLayout id="mark-view" col="0" style="background-color:red;" (tap)="onLeftSwipeClick($event)" orientation="horizontal">
-                            <Label horizontalAlignment="center" class="far" style="font-size: 50em; color: black" text="&#xf165;"></Label>
-                        </StackLayout>
-                        <StackLayout id="delete-view" col="2" style="background-color: green;" (tap)="onRightSwipeClick($event)" orientation="horizontal">
-                            <Label horizontalAlignment="center" class="far" style="font-size: 50em; color: black" text="&#xf004;"></Label>
-                        </StackLayout>
-                    </GridLayout>
-                </lv:RadListView.itemSwipeTemplate>
             </RadListView>
 
             <!--Tutorial Scroll-->
@@ -76,7 +64,7 @@
            
 
             <!--Sidebar Menu-->
-            <GridLayout (loaded)="menuLoaded($event)" row=0 rowspan=12 column=5 colspan=5 style="background-color: gray;" rows="*,*,*,*,*,*,*,*,*,*" columns="*,*,*,*,*,*,*,*,*,*,*,*,*">
+            <GridLayout (loaded)="menuLoaded($event)" row=0 rowspan=12 column=5 colspan=5 style="background-color: gray; padding-top:5;" rows="*,*,*,*,*,*,*,*,*,*" columns="*,*,*,*,*,*,*,*,*,*,*,*,*">
                     <SearchBar id="searchBar" class="searchMenu" hint="Search for items ..." (textChange)="onTextChanged($event)"
                     [text]="searchPhrase" (clear)="onClear($event)" (submit)="onSubmit($event)" row=0 column=0 colspan=14>
                     </SearchBar>
@@ -155,12 +143,12 @@
                 <Image [src] = "userIcon" height="70%" width = "70%"></Image>
                 <GridLayout columns="*,*,*,*,*">
                     <button col="0" colspan="2" width="100%" text="See Top Outfits" (tap)="browseTopOutfits()"></button>
-                    <button col="3" colspan="2" width="100%" text="Friends"  [nsRouterLink]="['friends']" ></button>
+                    <button col="3" colspan="2" width="100%" text="Friends" (tap)="openFriend()" ></button>
                 </GridLayout>
             </StackLayout>    
             <ScrollView row="1" rowspan="2" orientation="vertical">
                 <StackLayout>
-                        <Button class="profile" textAlignment = "center" text="My Liked"></Button>
+                        <Button class="profile" textAlignment = "center" text="My Liked" (tap)="openLikes()"></Button>
                         <RadListView height ="200" row="0" orientation="horizontal" [items]="userLikes" margin-left = "2" margin-right="2">
                             <ListViewLinearLayout tkListViewLayout scrollDirection="Horizontal"></ListViewLinearLayout>
                             <ng-template let-item="item" let-index="index">
@@ -171,7 +159,7 @@
                                 </StackLayout>
                             </ng-template>
                         </RadListView>
-                        <Button text = "Saved for later"></Button>
+                        <Button text = "Saved for later" (tap)="openSaved()"></Button>
                         <RadListView height ="200" row="0" orientation="horizontal" [items]="userSaved" margin-left = "2" margin-right="2">
                             <ListViewLinearLayout tkListViewLayout scrollDirection="Horizontal"></ListViewLinearLayout>
                             <ng-template let-item="item" let-index="index">
@@ -197,7 +185,7 @@
                 </StackLayout>
             </ScrollView>
 
-            <!--Search Profile Menu-->
+            <!--Profile Search Menu-->
             <GridLayout row="0" rowspan="3" id="profileSearch" rows="*,*,*,*,*,*,*,*,*,*" (loaded)="profileSearchLoaded($event)" style="background-color: rgba(59, 59, 59, .8); margin-right: 5;">
                 <RadListView row="1" rowspan="10" orientation="vertical" [items]="items"
                     width="100%" height="100%" (scrolled)="profileScrollStartedEvent($event)" loadOnDemandMode="Auto" (loadMoreDataRequested)="onLoadMoreItemsRequested($event)" loadOnDemandBufferSize="1"
@@ -222,6 +210,82 @@
                     [text]="searchPhrase" (clear)="onClear($event)" (submit)="onSubmit($event)">
                 </SearchBar>
             </GridLayout>
+
+            <!--Profile Search Likes-->
+            <GridLayout class="popUpMenu"row="0" rowspan="3" id="profileLikesSearch" rows="*,*,*,*,*,*,*,*,*,*" columns = "*,*,*,*,*,*,*,*,*,*" (loaded)="likesGridInitialized($event)">
+                <RadListView row="1" rowspan="10" column="0" colspan="10" orientation="vertical" [items]="searchLikes"
+                width="100%" height="100%" (scrolled)="profileLikesScrollStartedEvent($event)"
+                id="listView" selectionBehavior="None">
+                    <ListViewGridLayout tkListViewLayout itemInsertAnimation="Scale" scrollDirection="Vertical" ios:itemWidth="186" ios:itemHeight="180"></ListViewGridLayout>
+                    <ng-template horizontalAlignment="center" let-item="item" let-index="index">
+                        <GridLayout style="background-image: ~/item/backgroundShadow.png;" [nsRouterLink]="['detail', index]" 
+                        [queryParams]="{ source: 'userLikes', liked: true, disliked: false }" >
+                            <GridLayout columns="*,*,*" padding="0 0 0 0" >
+                                <Image colspan="3" [src]="item.img[0]" height="186" ios:stretch="aspectFill" ></Image>
+                            </GridLayout>
+                            <GridLayout style="background-color: rgba(255, 255, 255, 0.685); border-radius: 80%; border: 2" height="40">
+                                <Label textAlignment = "center" size = "15" width="100%" [text]="item.name" textWrap="true" style="color: black;"></Label>
+                            </GridLayout>
+                        </GridLayout>
+                    </ng-template>
+                </RadListView>
+
+                <SearchBar class="popUpMenu" id="searchBarLikesProfile" row=0 column="2" colspan="10" hint="Search through likes ..." (textChange)="onLikeTextChanged($event)" color="Black" textFieldHintColor="red" style="background-color: rgba(59, 59, 59, .8);"
+                    [text]="searchPhrase" (clear)="onLikesClear($event)" submit="onSubmit($event)">
+                </SearchBar>
+                <Label id="closeLikesIcon" row="0" column="0" colspan="2" class="far t-36" style="padding: 10; padding-left: 20; color: black;" text="&#xf057;" (tap)="closeLikes()"></Label>
+            </GridLayout>
+
+            <!--Profile Search Friends-->
+            <GridLayout class="friendsListGrid popUpMenu" id="profileFriends" row="0" rowspan="3" columns="*,*,*,*,*" rows="*,*,*,*,*,*,*,*,*,*" (loaded)="friendGridInitialized($event)">
+                <RadListView id="Main" column="0" colspan="5" row="1" rowspan="10" [items]="profileFriendsSearchUsers" orientation="Vertical" height=100%
+                        multipleSelection="false" selectionBehavior="Press" (scrolled)="friendsScrollStartedEvent($event)"
+                        (itemDeselected)="categoryDeselected($event)">
+                            <ListViewGridLayout tkListViewLayout scrollDirection="Vertical" itemWidth="350" itemHeight="95" spanCount="1"></ListViewGridLayout>
+                                <!-- When nesting ListView in ScrollView, make sure that the nested scrollable component has an explicitly set height -->
+                            <ng-template let-item="item" let-index="index" horizontalAlignment="center">
+                                <GridLayout id="userList" columns="*,*,*,*,*,*" rows="*,*" [queryParams]="{ source: 'friends', id: profileFriendsSearchUsers[index]['_id']}" style="margin-top: 10; margin-left: 15;">
+                                    <StackLayout orientation="horizontal" row="0" column="0" colspan="3" >
+                                    <label class="userListText" textAlignment = "left" [text]="'@' + item.username"></label>
+                                    </StackLayout>
+                                    <StackLayout row="1" column="0" colspan="3" orientation="horizontal">
+                                        <label class="userListText"  [text]="item.first_name + ' ' + item.last_name" textAlignment = "left"></label>
+                                    </StackLayout>
+                                    <Button text="Friend" row="0" rowspan="2" column="4" colspan="2" style="background-color: white; color: black;"></Button>
+                                </GridLayout>
+                            </ng-template>
+                </RadListView>
+                <SearchBar id="searchBarFriends" row="0" column="1" colspan="5" hint="Search for Users ..." loaded="searchStart($event)" (textChange)="onFriendTextChanged($event)"
+                [text]="searchPhrase" (clear)="onFriendClear($event)" submit="onSubmit($event)" style="padding-left: 30;">
+                </SearchBar>
+                <Label id="closeFriendIcon" row="0" column="0" class="far t-36" style="padding: 10; padding-left: 20; color: black;" text="&#xf057;" (tap)="closeFriend()"></Label>
+            </GridLayout>
+
+            <!--Profile Search Saved-->
+            <GridLayout class="popUpMenu"row="0" rowspan="3" id="profileSavedSearch" rows="*,*,*,*,*,*,*,*,*,*" columns = "*,*,*,*,*,*,*,*,*,*" (loaded)="savedGridInitialized($event)">
+                <RadListView row="1" rowspan="10" column="0" colspan="10" orientation="vertical" [items]="profileSavedSearchList"
+                width="100%" height="100%" (scrolled)="savedScrollStartedEvent($event)"
+                id="listView" selectionBehavior="None">
+                    <ListViewGridLayout tkListViewLayout itemInsertAnimation="Scale" scrollDirection="Vertical" ios:itemWidth="186" ios:itemHeight="180"></ListViewGridLayout>
+                    <ng-template horizontalAlignment="center" let-item="item" let-index="index">
+                        <GridLayout style="background-image: ~/item/backgroundShadow.png;" [nsRouterLink]="['detail', index]" 
+                        [queryParams]="{ source: 'userSaved'}" >
+                            <GridLayout columns="*,*,*" padding="0 0 0 0" >
+                                <Image colspan="3" [src]="item.img[0]" height="186" ios:stretch="aspectFill" ></Image>
+                            </GridLayout>
+                            <GridLayout style="background-color: rgba(255, 255, 255, 0.685); border-radius: 80%; border: 2" height="40">
+                                <Label textAlignment = "center" size = "15" width="100%" [text]="item.name" textWrap="true" style="color: black;"></Label>
+                            </GridLayout>
+                        </GridLayout>
+                    </ng-template>
+                </RadListView>
+
+                <SearchBar class="popUpMenu" id="searchBarSavedProfile" row=0 column="2" colspan="10" hint="Search through likes ..." (textChange)="onSavedTextChanged($event)" color="Black" textFieldHintColor="red" style="background-color: rgba(59, 59, 59, .8);"
+                    [text]="searchPhrase" (clear)="onSavedClear($event)" submit="onSubmit($event)">
+                </SearchBar>
+                <Label id="closeSavedIcon" row="0" column="0" colspan="2" class="far t-36" style="padding: 10; padding-left: 20; color: black;" text="&#xf057;" (tap)="closeSaved()"></Label>
+            </GridLayout>
+
         </Gridlayout>
     </TabContentItem>
 </Tabs>
